GNOME Bugzilla – Bug 787498
Can't erase remember username or password field
Last modified: 2017-09-10 16:06:18 UTC
How to reproduce: 1. Enter in a log in page where Epiphany remembers your password because you saved it earlier. For instance: https://github.com/login 2. Focus the username field. 3. Press Backspace to erase the text. 4. Press Tab or unfocus the username field in any other way. Expected behavior: The username field should remain empty. Actual behavior: The username field is filled again. You can change its value, but you can never have it empty again unless you disable the password manager.
A bad way to discover GitHub has blocked my IP from only its login page. Guess I will be using it rather less often in the future. :)
The following fix has been pushed: c66b517 web-extension: Do not re-fill username field on blur event
Created attachment 359467 [details] [review] web-extension: Do not re-fill username field on blur event I'm not sure what the benefit of this behavior is. The downside is obvious: you can't change the username field from its autofilled value. This is silly.
> A bad way to discover GitHub has blocked my IP from only its login page. Guess I > will be using it rather less often in the future. :) I'm sorry to hear that, I just used github as an example because its login page is simple enough and chances are many devs already have an account, but any site would do actually. Thank you for making a patch.