web-extension: Do not re-fill username field on blur event

I'm not sure what the benefit of this behavior is. The downside is
obvious: you can't change the username field from its autofilled value.
This is silly.

https://bugzilla.gnome.org/show_bug.cgi?id=787498